--- a/index.html
+++ b/index.html
@@ -29,20 +29,20 @@
       </div>
       <div class="bottom-container">
         <div class="first-bottom-container">
-          <img src="images\image-colton.jpg" alt="Colton-picture">
+          <img src="images/image-colton.jpg" alt="Colton-picture">
           <h3>Colton Smith <br><span>Verified Buyer</span> </h3>
           <p>"We needed the same printed design as the one we had ordered a week prior.
           Not only did they find the original order, but we also received it in time.
           Excellent!"</p>
         </div>
         <div class="second-bottom-container">
-          <img src="images\image-irene.jpg" alt="Irene-picture">
+          <img src="images/image-irene.jpg" alt="Irene-picture">
           <h3>Irene Roberts <br><span>Verified Buyer</span> </h3>
           <p>"Customer service is always excellent and very quick turn around. Completely
           delighted with the simplicity of the purchase and the speed of delivery."</p>
         </div>
         <div class="third-bottom-container">
-          <img src="images\image-anne.jpg" alt="Anne-picture">
+          <img src="images/image-anne.jpg" alt="Anne-picture">
           <h3>Anne Wallace <br><span>Verified Buyer</span></h3>
           <p>"Put an order with this company and can only praise them for the very high
           standard. Will definitely use them again and recommend them to everyone!"</p>
